--- a/infoskjerm.html
+++ b/infoskjerm.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-	<meta charset="ISO-8859-1">
-<script type="text/javascript" src="infoskjerm.js"></script>
+	<meta charset="UTF8">
+<script type="text/javascript" src="infoskjerm.js" charset="UTF8"></script>
 <link rel="stylesheet" type="text/css" href="infoskjerm_style.css">
 </head>
 
@@ -15,7 +15,7 @@
 		
 
 	</div>
-	<h1>KOMMENDE ARRANGEMENT</h1>
+	<h1 id="upchead">KOMMENDE ARRANGEMENT</h1>
 	<div id="upcoming"></div>
 	
 	<script>
